--- a/static/css/mypage/ownerpage.css
+++ b/static/css/mypage/ownerpage.css
@@ -16,15 +16,20 @@ img {
 
 .name {
     margin-left: 7px;
+    display: flex;
 }
 
 .name>span {
     font-size: x-large;
     font-weight: bold;
+    margin-top: 6px;
+    margin-left: 7px;
 }
 
-.name>li {
+.name>ul {
     font-size: small;
+    margin-left: -16.5%;
+    margin-top: 40px;
 }
 
 .produce>.pet {
@@ -35,7 +40,7 @@ img {
 
 .produce>.review {
     font-size: medium;
-    margin-left: 10px;
+    margin-left: 15px;
 }
 
 .produce>.reserving {
@@ -53,28 +58,28 @@ img {
     border: 1px;
     border-radius: 5px;
     width: 600px;
-    height: 25px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 14px;
     background-color: lightgray;
     margin-top: 15px;
-    margin-left: 7px;
+    margin-left: 15px;
 }
 
 .produce>.btn>.pay-amount {
     border: 1px;
     border-radius: 5px;
     width: 600px;
-    height: 25px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 14px;
     background-color: gray;
-    margin-left: 650px;
-    margin-top: -25px;
+    margin-left: 640px;
+    margin-top: -30px;
 }
 
 /* reserve section */
@@ -121,6 +126,7 @@ img {
     width: 60px;
     height: 20px;
     border-radius: 30px;
+    text-align: center;
 }
 
 .res1>ul>li:nth-child(2) {
@@ -130,6 +136,7 @@ img {
     width: 60px;
     height: 20px;
     border-radius: 30px;
+    text-align: center;
 }
 
 .res1>.schedule1 {
@@ -162,6 +169,7 @@ img {
     text-align: center;
     margin-top: 10%;
     margin-left: 13px;
+    font-size: medium;
 }
 
 .reserve>.res1>.view1 {
@@ -172,6 +180,7 @@ img {
     text-align: center;
     margin-left: 51%;
     margin-top: -5%;
+    font-size: medium;
 }
 
 .res2 {
@@ -185,9 +194,8 @@ img {
 
 .res2>ul {
     border: 1px;
-
-    text-align: center;
     display: flex;
+    text-align: center;
 }
 
 .res2>ul>li:nth-child(1) {
@@ -206,6 +214,7 @@ img {
     width: 60px;
     height: 20px;
     border-radius: 30px;
+    
 }
 
 .res2>.schedule2 {
@@ -238,6 +247,7 @@ img {
     text-align: center;
     margin-top: 10%;
     margin-left: 13px;
+    font-size: medium;
 }
 
 .reserve>.res2>.view2 {
@@ -248,6 +258,7 @@ img {
     text-align: center;
     margin-left: 51%;
     margin-top: -5%;
+    font-size: medium;
 }
 
 .allres {
@@ -257,6 +268,7 @@ img {
     height: 30px;
     text-align: center;
     margin: 10px 20px;
+    font-size: medium;
 }
 
 /* pet profil */
@@ -279,39 +291,63 @@ img {
     width: 70px;
     height: 30px;
     margin-left: 85%;
-    margin-top: -20px;
+    margin-top: -30px;
     border-radius: 5px;
 }
-
-.profil>.pet-prof>span {
-    font-size: large;
+.care>a{
+    font-size: medium;
 }
-
-.profil>.pet-prof>ul {
-    margin-left: 10%;
+.profil>.pet-prof>span {
+    font-size: x-large;
+    padding-left: 10px;
 }
 
 .profil>.pet-prof>ul>li {
-    font-size: x-small;
+    font-size: small;
+    padding-left: 15px;
 }
 
 .profil>.pet-prof>.pro1 {
     border: 1px solid;
     border-radius: 5px;
     width: 590px;
-    height: auto;
+    height: 72px;
     margin-top: 20px;
-    margin-left: 8px;
+    margin-left: 11px;
 }
+
+.profil>.pet-prof>.pro1>ul>li {
+    padding-left: 15%;
+    font-size: small;
+}
+
+.profil>.pet-prof>.pro1>ul>li:nth-child(1) {
+    margin-top: -55px;
+    font-weight: bolder;
+}
+
+.profil>.pet-prof>.pro1>ul>li:nth-child(2){} 
 
 .profil>.pet-prof>.pro2 {
     border: 1px solid;
     border-radius: 5px;
     width: 590px;
-    height: auto;
-    margin-top: 20px;
-    margin-left: 8px;
+    height: 72px;
+    margin-top: 15px;
+    margin-left: 11px;
 }
+
+.profil>.pet-prof>.pro2>ul>li {
+    padding-left: 15%;
+    font-size: small;
+}
+
+.profil>.pet-prof>.pro2>ul>li:nth-child(1) {
+    margin-top: -55px;
+    font-weight: bolder;
+}
+
+.profil>.pet-prof>.pro2>ul>li:nth-child(2) {}
 
 /* SITTER */
 .sitter {
@@ -323,11 +359,13 @@ img {
 }
 
 .sitter>.sit-used>span {
-    font-size: large;
+    font-size: x-large;
+    padding-left: 10px;
 }
 
 .sitter>.sit-used>ul>li {
     font-size: small;
+    padding-left: 15px;
 }
 
 .sitter>.sit-name1 {
@@ -336,7 +374,7 @@ img {
     width: 590px;
     height: 70px;
     margin-top: 10px;
-    margin-left: 8px;
+    margin-left: 11px;
 
     display: flex;
     flex-wrap: wrap;
@@ -357,7 +395,8 @@ img {
 
 .sitter>.sit-name1>ul>li:nth-child(3) {
     font-size: small;
-    padding: 5px;
+    padding-left: 25px;
+    margin-top: -22px;
 }
 
 .sitter>.sit-name1>ul>li:nth-child(4) {
@@ -373,8 +412,11 @@ img {
     height: 30px;
     text-align: center;
 
-    margin-top: -41px;
+    margin-top: -52px;
     margin-left: 84%;
+}
+.sitter>.sit-name1>.chat1>a{
+    font-size: medium;
 }
 
 .sitter>.sit-name2 {
@@ -383,7 +425,7 @@ img {
     width: 590px;
     height: 70px;
     margin-top: 10px;
-    margin-left: 8px;
+    margin-left: 11px;
 
     display: flex;
     flex-wrap: wrap;
@@ -404,7 +446,8 @@ img {
 
 .sitter>.sit-name2>ul>li:nth-child(3) {
     font-size: small;
-    padding: 5px;
+    padding-left: 25px;
+    margin-top: -22px;
 }
 
 .sitter>.sit-name2>ul>li:nth-child(4) {
@@ -420,8 +463,11 @@ img {
     height: 30px;
     text-align: center;
 
-    margin-top: -41px;
+    margin-top: -52px;
     margin-left: 84%;
+}
+.sitter>.sit-name2>.chat2>a{
+    font-size: medium;
 }
 
 .sitter>.res3 {
@@ -431,6 +477,7 @@ img {
     height: 25px;
     text-align: center;
     justify-content: center;
+    font-size: small;
 
-    margin: 20px 8px 10px 8px;
+    margin: 13px 7px 15px 11px;
 }
