--- a/pet/src/main/resources/templates/common/config.html
+++ b/pet/src/main/resources/templates/common/config.html
@@ -1,9 +1,9 @@
 <th:block th:fragment="configFragment" xmlns:th="http://www.w3.org/1999/xhtml">
 
     <!-- css -->
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/header.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css(after)}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/header.css(after)}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/footer.css(after)}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- Content Page의 CSS fragment 삽입 -->
     <th:block layout:fragment="css"></th:block>
