--- a/static/css/header.css
+++ b/static/css/header.css
@@ -28,7 +28,6 @@
     position: relative;
     display: flex;
     justify-content: left;
-    gap: 150px;
     align-items: center;
     height: 100%;
 }
@@ -40,12 +39,29 @@
     align-items: center;
 }
 
+.list {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 150px;
+    transition: 0.3s ease;
+}
+
+.list:hover{
+    background: #333;
+}
+
+.list:hover > a {
+    color: #fff;
+}
+
 /* 서브메뉴 */
 .sub-menu {
     position: absolute;
     top: calc(100% + 1px);
-    left: -100%;
-    width: 150px;
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
