--- a/pet/src/main/resources/templates/sign/signup.html
+++ b/pet/src/main/resources/templates/sign/signup.html
@@ -30,6 +30,13 @@
                 <input id="sitter" type="radio" name="tabName">
                 <label class="tab-name" for="sitter">Sitter</label>
             </div>
+            <div th:if="${error}" class="error-message" style="color:red; text-align:center; margin-bottom:10px;">
+                <p th:text="${error}"></p>
+            </div>
+            <!-- 성공 메시지 -->
+            <div th:if="${success}" style="color:green; text-align:center;">
+                <p th:text="${success}"></p>
+            </div>
             <form action="/signup" id="ownerSign" class="tab-content" method="post">
                 <div class="txt_field">
                     <input type="text" name="email" required>
