--- a/static/css/mypage/sitterpage.css
+++ b/static/css/mypage/sitterpage.css
@@ -509,7 +509,7 @@ img {
     height: 350px;
     border: 1px solid;
     border-radius: 5px;
-    margin: 15px 0;
+    margin: 20px 0;
 }
 
 .resend>.end {
@@ -534,14 +534,15 @@ img {
     border: 1px solid;
     border-radius: 5px;
     margin-top: 20px;
-    margin-left: 6%;
-    width: 150px;
+    margin-left: 4%;
+    width: 165px;
     height: 250px;
 }
 
 .end-res1>.dog6 {
     margin-left: 12px;
     margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .end-res1>.en1 {
@@ -562,57 +563,144 @@ img {
 .char1 {
     border: 1px solid;
     border-radius: 3px;
-    width: 50px;
+    width: 65px;
     height: 25px;
     text-align: center;
+    margin-left: 6px;
+    margin-top: 24px;
+    font-size: small;
 }
 
 .rec1 {
     border: 1px solid;
     border-radius: 3px;
-    width: 50px;
+    width: 65px;
     height: 25px;
     text-align: center;
+    margin-left: 53%;
+    margin-top: -15.5%;
+    font-size: small;
 }
 
 .end-res2 {
     border: 1px solid;
     border-radius: 5px;
     margin-top: -40.5%;
-    margin-left: 38%;
-    width: 150px;
+    margin-left: 36.5%;
+    width: 165px;
     height: 250px;
 }
 
-.end-res2>.dog7 {}
+.end-res2>.dog7 {
+    margin-left: 12px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
 
-.end-res2>.en2 {}
+.end-res2>.en2 {
+    text-align: center;
+    font-size: small;
+}
 
-.end-res2>.ed2 {}
+.end-res2>.ed2 {
+    text-align: center;
+    font-size: small;
+}
 
-.end-res2>.es2 {}
+.end-res2>.es2 {
+    text-align: center;
+    font-size: small;
+}
 
-.char2 {}
+.char2 {
+    border: 1px solid;
+    border-radius: 3px;
+    width: 65px;
+    height: 25px;
+    text-align: center;
+    margin-left: 6px;
+    margin-top: 24px;
+    font-size: small;
+}
 
-.rec2 {}
+.rec2 {
+    border: 1px solid;
+    border-radius: 3px;
+    width: 65px;
+    height: 25px;
+    text-align: center;
+    margin-left: 53%;
+    margin-top: -15.5%;
+    font-size: small;
+}
 
 .end-res3 {
     border: 1px solid;
     border-radius: 5px;
     margin-top: -40.5%;
-    margin-left: 70%;
-    width: 150px;
+    margin-left: 69%;
+    width: 165px;
     height: 250px;
 }
 
-.end-res3>.dog8 {}
+.end-res3>.dog8 {
+    margin-left: 12px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
 
-.end-res3>.en3 {}
+.end-res3>.en3 {
+    text-align: center;
+    font-size: small;
+}
 
-.end-res3>.ed3 {}
+.end-res3>.ed3 {
+    text-align: center;
+    font-size: small;
+}
 
-.end-res3>.es3 {}
+.end-res3>.es3 {
+    text-align: center;
+    font-size: small;
+}
 
-.char3 {}
+.char3 {
+    border: 1px solid;
+    border-radius: 3px;
+    width: 65px;
+    height: 25px;
+    text-align: center;
+    margin-left: 6px;
+    margin-top: 24px;
+    font-size: small;
+}
 
-.rec3 {}
+.rec3 {
+    border: 1px solid;
+    border-radius: 3px;
+    width: 65px;
+    height: 25px;
+    text-align: center;
+    margin-left: 53%;
+    margin-top: -15.5%;
+    font-size: small;
+}
+
+.section {}
+
+.section>.left {
+    margin-left: -120%;
+    margin-top: 10%;
+}
+
+.section>.number {
+    margin-left: -93%;
+    margin-top: -18%;
+    font-size: large;
+}
+
+.section>.right {
+    margin-left: -45%;
+    margin-top: -14.5%;
+
+}
