--- a/static/css/mypage/sitterprofile.css
+++ b/static/css/mypage/sitterprofile.css
@@ -6,11 +6,107 @@ img {
 
 .all-profile {
     width: 1260px;
-    height: auto;
+    height: 800px;
     border: 1px solid;
     border-radius: 5px;
+    margin: 20px 0 20px 0;
 }
 
-.all-profile>.photo {}
+.all-profile>.care-prof {
+    font-size: xx-large;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 10px;
+}
 
-.all-profile>.pw-cng {}
+.all-profile>.photo {
+    width: 270px;
+    height: 270px;
+    border: 1px solid;
+    border-radius: 3px;
+    margin: 25px 50px 5px 50px;
+    background-color: lightgray;
+    padding: 8px;
+}
+
+.all-profile>.photo>.clear>ul {
+    display: flex;
+}
+
+.all-profile>.photo>.clear>ul>li {
+    border: 1px solid;
+    width: 65px;
+    height: 25px;
+    font-size: small;
+    text-align: center;
+    margin-left: 5%;
+    margin-top: 8%;
+    border-radius: 3px;
+}
+
+.all-profile>.photo>.clear>ul>li:nth-child(1) {
+    margin-left: 23%;
+}
+
+.all-profile>.photo>.clear>ul>li:nth-child(2) {}
+
+.cng {
+    margin-top: -23%;
+    margin-left: 30%;
+}
+
+
+
+/* .cng>.pw-cng {
+    font-size: large;
+    text-align: justify;
+    padding-bottom: 10px;
+} */
+
+.cng>.my-cng {
+    font-size: large;
+    text-align: justify;
+    width: 850px;
+    height: 100px;
+
+}
+
+.cng>.my-cng>.na-cng {
+    padding: 10px;
+    border: 1px solid;
+    margin: 10px 0 10px 0;
+}
+
+.cng>.my-cng>.loca {
+    padding: 10px;
+    border: 1px solid;
+    margin: 10px 0 10px 0;
+    display: flex;
+}
+.cng>.my-cng>.loca>ul>li
+
+.cng>.my-cng>.loca>ul>.ad {
+    border: 1px solid;
+    width: 50px;
+    text-align: center;
+    margin-left: 1190%;
+    margin-top: 13px;
+}
+
+.cng>.my-cng>.numb {
+    padding: 10px;
+    border: 1px solid;
+    margin: 10px 0 10px 0;
+}
+
+.cng>.my-cng>.amount {
+    padding: 10px;
+    border: 1px solid;
+    margin: 10px 0 10px 0;
+}
+
+.cng>.my-cng>.pr {
+    padding: 10px;
+    border: 1px solid;
+    margin: 10px 0 10px 0;
+}
