--- a/static/css/mainPage.css
+++ b/static/css/mainPage.css
@@ -1,135 +1,157 @@
 .content {
-	font-size: 50px;
+  font-size: 50px;
 }
 
 .material-symbols-outlined {
-	font-variation-settings:
-		'FILL' 0,
-		'wght' 400,
-		'GRAD' 0,
-		'opsz' 24
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 .slide {
-	min-height: calc(100vh - 100px);
+  min-height: calc(100vh - 100px);
 }
 
 .slide.swiper {
-	min-height: calc(100vh - 100px);
-	/* 헤더 제외한 높이 */
-	height: calc(100vh - 100px);
+  min-height: calc(100vh - 100px);
+  /* 헤더 제외한 높이 */
+  height: calc(100vh - 100px);
 }
 
 /* 슬라이드 래퍼와 각 슬라이드가 100% 높이 차지하도록 */
 .swiper-wrapper {
-	height: 100%;
+  height: 100%;
 }
 
 .swiper-slide {
-	height: 100%;
-	display: flex;
-	position: relative;
-	justify-content: center;
-	align-items: center;
+  height: 100%;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
 }
 
 .swiper-slide img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .slide-text {
-	position: absolute;
-	top: 30px;
-	left: 30px;
-	color: white;
-	background-color: rgba(0, 0, 0, 0.4);
-	padding: 16px;
-	border-radius: 10px;
-	font-size: 25px;
-	opacity: 0;
-	transform: translateY(-60px);
-	transition: all 0.8s ease-out;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 16px;
+  border-radius: 10px;
+  font-size: 25px;
+  opacity: 0;
+  transform: translateY(-60px);
+  transition: all 0.8s ease-out;
 }
 
 .swiper-slide-active .slide-text {
-	opacity: 1;
-	transform: translateY(0);
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /* 처음엔 숨김 + 아래로 살짝 이동 */
 .services.hidden {
-	opacity: 0;
-	transform: translateY(500px);
-	transition: all 0.8s ease-out;
+  opacity: 0;
+  transform: translateY(500px);
+  transition: all 0.8s ease-out;
 }
 
 /* 보일 때 적용되는 애니메이션 */
 .services.show {
-	opacity: 1;
-	transform: translateY(0);
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .services {
-	margin: 0 auto;
-	width: 1280px;
-	justify-items: center;
-	min-height: 100vh;
+  margin: 0 auto;
+  width: 1280px;
+  justify-items: center;
+  min-height: calc(100vh - 400px);
 }
 
-.services>.service-cards {
-	display: flex;
-	text-align: center;
-	margin-top: 100px;
+.services > h6 {
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
-.services>.service-cards>.card {
-	display: block;
-	opacity: 0;
-	transform: translateY(500px);
-	transition: all 1s ease-out;
-	height: 500px;
-	margin: 30px;
-	border: 1px solid gray;
-	border-radius: 25px;
+.services > p {
+  font-size: 15px;
 }
 
-.services>.service-cards>.card.show {
-	opacity: 1;
-	transform: translateY(0);
+.services > .service-cards {
+  display: flex;
+  text-align: center;
+  margin-top: 50px;
 }
 
-.services>.service-cards>.card>p {
-	font-size: 40px;
+.services > .service-cards > .card {
+  display: block;
+  opacity: 0;
+  transform: translateY(500px);
+  transition: all 1s ease-out;
+  height: 500px;
+  width: 330px;
+  margin: 30px;
+  border: 1px solid gray;
+  border-radius: 25px;
 }
 
-.services>.service-cards>.card>.image {
-	width: 330px;
-	height: 300px;
+.services > .service-cards > .card.show {
+  opacity: 1;
+  transform: translateY(0);
 }
 
-.services>.service-cards>.card>.image>img {
-	width: 100%;
-	height: 100%;
+.services > .service-cards > .card > p {
+  font-size: 20px;
+  margin-bottom: 50px;
 }
 
-.services>.service-cards>.card>a {
-	display: block;
-	border-radius: 30px;
-	font-size: 30px;
-	color: white;
-	background-color: black;
-	width: 300px;
-	height: 50px;
-	margin-top: 10px;
-	margin-left: 15px;
+.services > .service-cards > .card > .image {
+  margin: 15px;
+  width: 300px;
+  height: 250px;
+}
+
+.services > .service-cards > .card > .image > img {
+  border-radius: 15%;
+  width: 100%;
+  height: 100%;
+}
+
+.services > .service-cards > .card > a {
+  display: block;
+  border-radius: 30px;
+  font-size: 20px;
+  letter-spacing: 5px;
+  line-height: 50px;
+  color: white;
+  background-color: black;
+  width: 300px;
+  height: 50px;
+  margin-top: 30px;
+  margin-left: 15px;
 }
 
 .rank {
-	border: 1px solid;
-	margin: 0 auto;
-	width: 1280px;
-	justify-items: center;
-	min-height: calc(100vh - 100px);
+  margin: 0 auto;
+  justify-items: center;
+  min-height: 300px;
+  display: flex;
+  justify-content: center;
+  background-color: #f2fcfc;
+}
+
+.rank > .description {
+  line-height: 300px;
+  margin-right: 250px;
+}
+
+#myChart {
+	width: 500px !important;
+	margin-top: 30px;
 }
