--- a/pet/src/main/resources/templates/modal/reservemodal.html
+++ b/pet/src/main/resources/templates/modal/reservemodal.html
@@ -1,6 +1,6 @@
 <!-- templates/modal/reservemodal.html -->
 
-<div th:fragment="sitterDetail" xmlns:th="http://www.w3.org/1999/xhtml">
+<div th:fragment="sitterDetail" xmlns:th="http://www.w3.org/1999/xhtml" id="reserve-modal" class="modal">
     <div class="modal-content">
         <span class="close-btn" id="modal-x-btn">&times;</span>
         <div class="sitter-main">
