--- a/pet/src/main/resources/static/css/reservemodal.css
+++ b/pet/src/main/resources/static/css/reservemodal.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: 1000;
@@ -16,6 +16,8 @@
     padding: 30px;
     border-radius: 10px;
     position: relative;
+    height: 80vh;
+    overflow-y: scroll;
 }
 
 .close-btn {
