--- a/pet/src/main/resources/templates/mainPage/main.html
+++ b/pet/src/main/resources/templates/mainPage/main.html
@@ -29,22 +29,30 @@
             <div class="swiper-slide">
                 <img src="../../asset/강아지2.jpg" alt="슬라이드1">
                 <div class="slide-text">
-                    <h3>우리 강아지를 위한 최고의 공간</h3>
-                    <p>사랑과 안전이 가득한 데이케어 서비스를 제공합니다.</p>
+                    <h4>우리 아이를 위한 하루의 시작</h4>
+                    <p>
+                        바쁜 하루를 시작하는 당신을 대신해, 반려견의 하루를 따뜻하게 책임집니다.
+                    </p>
                 </div>
             </div>
             <div class="swiper-slide">
                 <img src="../../asset/산책.jpg" alt="슬라이드2">
                 <div class="slide-text">
-                    <h3>우리 강아지를 위한 최고의 공간</h3>
-                    <p>사랑과 안전이 가득한 데이케어 서비스를 제공합니다.</p>
+                    <h4>언제 어디서든 안심하고 맡기세요</h4>
+                    <p>
+                        갑작스러운 출장, 여행이 걱정될 땐? 집처럼 편안한 호텔링
+                        공간과 전담 시터가 반려견의 하루를 정성껏 돌봐드립니다.
+                    </p>
                 </div>
             </div>
             <div class="swiper-slide">
                 <img src="../../asset/산책2.jpg" alt="슬라이드3">
                 <div class="slide-text">
-                    <h3>우리 강아지를 위한 최고의 공간</h3>
-                    <p>사랑과 안전이 가득한 데이케어 서비스를 제공합니다.</p>
+                    <h4>함께하지 못하는 시간, 걱정 대신 신뢰로</h4>
+                    <p>
+                        매일의 산책이 부담될 때, 반려견의 활력과 즐거움을 책임지는
+                        산책 서비스로 건강한 하루를 선물하세요.
+                    </p>
                 </div>
             </div>
         </div>
@@ -89,7 +97,12 @@
         </div>
     </div>
     <div class="rank">
-        <h2>이달의 베스트 시터</h2>
+        <div class="description">
+            <h2>이달의 베스트 시터</h2>
+        </div>
+        <div class="chart">
+            <canvas id="myChart"></canvas>
+        </div>
     </div>
 </div>
 
